# Agentic-Cloud-Security-and-Remediation-Framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: demo_queries.cypher  schema.md
scripts/: inject_dummy_path.py
src/acsrf/: main.py
src/acsrf/agents/: enum_agent.py
src/acsrf/agents/nl2cypher/: __init__.py  agent.py  prompts.py  schema_context.py
src/acsrf/data/: dummy_cloud.py
src/acsrf/graph/: ingest_dummy.py  ingest_real.py  schema_init.py  viz.py
src/acsrf/llm/: __init__.py  backend.py
src/acsrf/mcp/: client.py
src/acsrf/orchestrator/: __init__.py  graph.py  nodes.py  state.py
src/acsrf/queries/: query_pack.py
